# Quantifyr

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
docs/: index.md
docs/javascripts/: sidebar-sync.js
docs/stylesheets/: extra.css
docs/tutorials/: api-reference.md  classical_ae.md  data_processing.md  quantum_ae.md  visualization.md
notebooks/exploratory/: 01_molecular_data_processing.ipynb
scripts/: pre-commit-check.ps1  pre-commit-check.sh
search/: search_index.json
src/classical_ae/: __init__.py  classical_ae.py
src/data_utils/: __init__.py  data_utils.py  datasets.py  features.py  graphs.py  parsing.py  properties.py
src/gnn_quantum/: __init__.py  gnn_quantum.py
src/quantum_ae/: __init__.py  quantum_ae.py
src/qvae/: __init__.py  qvae.py
src/viz/: __init__.py  colors.py  core.py  molecular_2d.py  molecular_3d.py  networks.py  properties.py  themes.py  viz.py
stylesheets/: extra.css
tests/: test_classical_ae.py  test_data_utils.py  test_gnn_quantum.py  test_quantum_ae.py  test_qvae.py  test_viz.py
tests/e2e/: __init__.py
tests/fixtures/: README.md
tests/integration/: __init__.py
tests/unit/: __init__.py  test_classical_ae.py  test_data_utils.py  test_gnn_quantum.py  test_quantum_ae.py  test_qvae.py  test_viz.py
tutorials/api-reference/: index.html
tutorials/classical_ae/: index.html
tutorials/data_processing/: index.html
tutorials/quantum_ae/: index.html
tutorials/visualization/: index.html
